# template

./: .env.example  .flake8  .gitignore  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/auth/: auth.py  utils.py
backend/db/: database.py  models.py  schemas.py
backend/routers/: auth.py  posts.py  users.py
bruno/: bruno.json
bruno/auth/: login user.bru  me.bru  register user.bru
bruno/posts/: create new post.bru  delete post.bru  get all posts.bru  get post info.bru  like post.bru  unlike post.bru  update post.bru
bruno/users/: delete user.bru  get all user's posts.bru  get all users.bru  update user.bru  user info.bru
db/: 01_init.sql  02_indices.sql  03_functions_and_triggers.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
nginx/: default.dev.conf  default.prod.conf
tests/: posts.py  test_main.py
